CloadShop-1 - basic integration with AWS and basic CRUD