@@ -4,18 +4,42 @@ import org.springframework.http.HttpStatus;
 
 /**
  * Exception thrown when attempting to create a resource that already exists.
+ * 
+ * Java 25: Part of sealed exception hierarchy.
  */
-public class DuplicateResourceException extends CloudShopException {
+public non-sealed class DuplicateResourceException extends CloudShopException {
+
+    private final String resourceName;
+    private final String fieldName;
+    private final Object fieldValue;
 
     public DuplicateResourceException(String resourceName, String fieldName, Object fieldValue) {
         super(
-            String.format("%s already exists with %s: '%s'", resourceName, fieldName, fieldValue),
+            "%s already exists with %s: '%s'".formatted(resourceName, fieldName, fieldValue),
             HttpStatus.CONFLICT,
             "DUPLICATE_RESOURCE"
         );
+        this.resourceName = resourceName;
+        this.fieldName = fieldName;
+        this.fieldValue = fieldValue;
     }
 
     public DuplicateResourceException(String message) {
         super(message, HttpStatus.CONFLICT, "DUPLICATE_RESOURCE");
+        this.resourceName = null;
+        this.fieldName = null;
+        this.fieldValue = null;
+    }
+
+    public String getResourceName() {
+        return resourceName;
+    }
+
+    public String getFieldName() {
+        return fieldName;
+    }
+
+    public Object getFieldValue() {
+        return fieldValue;
     }
 }
