@@ -4,18 +4,42 @@ import org.springframework.http.HttpStatus;
 
 /**
  * Exception thrown when a requested resource is not found.
+ * 
+ * Java 25: Part of sealed exception hierarchy.
  */
-public class ResourceNotFoundException extends CloudShopException {
+public non-sealed class ResourceNotFoundException extends CloudShopException {
+
+    private final String resourceName;
+    private final String fieldName;
+    private final Object fieldValue;
 
     public ResourceNotFoundException(String resourceName, String fieldName, Object fieldValue) {
         super(
-            String.format("%s not found with %s: '%s'", resourceName, fieldName, fieldValue),
+            "%s not found with %s: '%s'".formatted(resourceName, fieldName, fieldValue),
             HttpStatus.NOT_FOUND,
             "RESOURCE_NOT_FOUND"
         );
+        this.resourceName = resourceName;
+        this.fieldName = fieldName;
+        this.fieldValue = fieldValue;
     }
 
     public ResourceNotFoundException(String message) {
         super(message, HttpStatus.NOT_FOUND, "RESOURCE_NOT_FOUND");
+        this.resourceName = null;
+        this.fieldName = null;
+        this.fieldValue = null;
+    }
+
+    public String getResourceName() {
+        return resourceName;
+    }
+
+    public String getFieldName() {
+        return fieldName;
+    }
+
+    public Object getFieldValue() {
+        return fieldValue;
     }
 }
